--- a/samscon.css
+++ b/samscon.css
@@ -1,5 +1,3 @@
-        
-
 * {
     padding: 0;
     margin: 0;
@@ -7,30 +5,31 @@
 }
 
 body {
-    background-image: url(/images/mountains.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-color: rgba(0, 0, 0, 0.3);
-} 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
-nav {
-    background-color: navy;
-    padding: 25px;
-    border: 1px solid;
-    border-radius: 5px;
+header {
     position: sticky;
     top: 0;
-    margin: 0;
+}
+
+nav {
+    padding: 25px;
+    border-radius: 5px;
 }
 
 #nav a {
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Verdana, sans-serif;
     color: white;
     font-size: 18px;
     font-weight: 700;
     margin-left: 5px;
     margin-right: 5px;
     text-decoration: none;
-    padding: 24px;
+    padding: 20px;
 }
 
 nav a:hover {
@@ -42,22 +41,453 @@ body h1, p, h2, img, hr {
 }
 
 .dan {
-    font-size: 200%; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; width: 25px;
+    display: flex;
+    font-size: 26px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; width: 25px;
     color: black;
-    height: 50px;
-    padding: 10px 30px;
+    height: 40px;
     text-decoration: none;
+    border-radius: 90px;
+    text-align: center;
+    align-items: center;
+    width: 140px;
+    justify-content: space-between;
+    flex-direction: column;
+    margin: 10px auto;
+}
+
+link {
+    border-radius: 50px;
+}
+
+#link [href="index.html"] {
+    background-color: blue;
+}
+
+.image h1 {
+    font-size: 2.5rem;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+}
+
+.head {
+    position: sticky;
+    display: flex;
+    justify-content: space-between;
+    background-color: navy;
+    align-items: center;
+}
+
+.icon {
+    display: none;
+    font-weight: 900;
+    font-size: 35px;
+    text-decoration: none;
+}
+.icon:hover {
+    background-color: blue;
+    padding: 0 5px;
+}
+
+@media (max-width:1024px) {
+    nav {
+        display: none;
+    }
+
+    #link {
+        display: none;
+    }
+
+    .icon {
+        display: inline-block;
+        color: aliceblue;
+        text-decoration: none;
+    }
+}
+
+.title {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: aliceblue;
+    font-size: 20px;
+}
+
+.title span {
+    color: gold;
+}
+
+.hero {
+    background-color: teal;
+    padding: 5% 10px;
+}
+
+.hero-main {
+    display: flex;
+    margin: auto;
+    padding: 40px 8px;
+    border-radius: 20px;
+    width: 92%;
+    background-color: gainsboro;
+    align-items: center;
+}
+
+.hero-main h1 {
+    text-align: center;
+    margin: 20px auto;
+}
+
+.search {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: gold;
+}
+
+.search-title p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.search-text {
+    background-image: url(/images/Assets/skills.svg);
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    align-items: center;
+    margin: auto;
+    border-radius: 10px;
+    padding: 20px 10px;
+}
+
+.search-text h2 {
+    color: white;
+    margin: 40px auto;
+}
+
+.search-links {
+    background-color: chartreuse;
+    padding: 20px 10px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    margin:20px auto;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 40px;
+}
+
+hr {
+    width: 95%; 
+    text-align: center;
+    margin: 20px auto;
+}
+
+.google {
+    color: black;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.edge {
+    color: black;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.code {
+    background-color: coral;
+    padding: 20px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.code a {
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.engineer {
+    background-color: coral;
+    padding: 20px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.engineer-content {
+    background-color: chocolate;
+    padding: 15px 10px;
+    margin: 10px auto;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 70%;
+    flex-direction: column;
+}
+
+.engineer-content2 {
+    background-color: lime;
+    padding: 15px 10px;
+    margin: 10px auto;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 70%;
+    flex-direction: column;
+}
+
+.engineer-content2 a {
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.footer {
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10px;
+    flex-direction: column;
+}
+
+.footer-content h1 {
+    color: aliceblue;
+    font-weight: bold;
+    text-align: center;
+}
+
+.code-about {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: gainsboro;
+    padding: 20px 10px;
+    margin: 10px auto;
+    width: 90%;
+    border-radius: 40px;
+}
+
+.code-about2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: lightgreen;
+    padding: 20px 20px;
+    margin: 10px auto;
+    width: 90%;
     border-radius: 90px;
 }
 
-@media (max-width:1100px) {
-    body {
-        background-image: url(/images/cliff.jpg);
+.game {
+    background-color: darkcyan;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 30px 30px;
+}
+
+.game-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: cornflowerblue;
+    width: 90%;
+    border-radius: 30px;
+}
+
+.news {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: lightseagreen;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.news-content3 {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+}
+
+.news > h1 {
+    text-decoration: underline;
+}
+
+.fast {
+    background-color: gold;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+}
+
+.fast-content1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    text-decoration: underline;
+    margin: 20px auto;
+}
+
+.fast-content1 img {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+}
+
+.fast-content2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    background-color: darkcyan;
+    border-radius: 30px;
+    padding: 15px 10px;
+    margin: 20px auto;
+}
+
+.fast-content2 p {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    width: 100%;
+}
+
+.fast-content2 a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+.fast-content2 h3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+@media (max-width:785px) {
+    .fast-content1 {
+        font-size: 10px;
     }
 }
 
-@media (max-width:700px) {
-    body {
-        background-image: url(/images/bridge.jpg);
-    }
+.contact {
+    background-color: green;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
 }
+
+.contact div {
+    background-color: green;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+}
+
+.send {
+    padding: 15px 0;
+    background-color: aliceblue;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    margin: 30px auto;
+    border-radius: 30px;
+}
+
+.send input {
+    display: block;
+    font-size: 18px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    margin: 5px auto;
+    height: 45px;
+    width: 90%;
+}
+
+.email {
+    width: 90%;
+    height: 150px;
+    border-radius: 10px;
+    font-size: 18px;
+    margin: 5px auto;
+}
+
+.dropdown { 
+    display: none; 
+    position: absolute; 
+    background-color: #f9f9f9; 
+    min-width: 160px; 
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
+    z-index: 1; 
+} 
+ 
+.dropdown a { 
+    color: black; 
+    padding: 12px 16px; 
+    text-decoration: none; 
+    display: block; 
+    text-align: left; 
+} 
+ 
+.dropdown a:hover {background-color: #f1f1f1;} 
+ 
+.dropdown:hover { 
+    display: block; 
+}
+
+.dropdown {
+      float: left;
+      overflow: hidden;
+    }
+
+    .dropdown .icon {
+      cursor: pointer;
+      font-size: 16px;  
+      border: none;
+      outline: none;
+      color: white;
+      padding: 14px 20px;
+      background-color: inherit;
+      font-family: inherit;
+      margin: 0;
+    }
